shift add and delete issue resolved

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,9 @@
 .height-250{
     min-height: 200px;
 }
+.btn-radial{
+    border-radius: 20px;
+}
 .btn-fixed{
     width: 150px;
 }
